# Ray-Tracing-in-One-Weekend-CN

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  PRINTING_CN.md  README.md  README_CN.md  README_EN.md
books/: RayTracingInOneWeekend_cn.html  RayTracingTheNextWeek_cn.html  RayTracingTheRestOfYourLife_cn.html
rust/InOneWeekend/: Cargo.toml  HowTo.md
rust/InOneWeekend/src/: camera.rs  color.rs  hittable.rs  hittable_list.rs  interval.rs  main.rs  material.rs  ray.rs  rtweekend.rs  sphere.rs  vec3.rs
rust/TheNextWeek/: Cargo.toml  HowTo.md
rust/TheNextWeek/src/: aabb.rs  camera.rs  hittable.rs  hittable_list.rs  interval.rs  main.rs  material.rs  perlin.rs  quad.rs  ray.rs  sphere.rs  texture.rs
rust/TheRestOfYourLife/: Cargo.toml
rust/TheRestOfYourLife/src/: bvh.rs  camera.rs  color.rs  constant_medium.rs  hittable_list.rs  interval.rs  lib.rs  main.rs  material.rs  pdf.rs  quad.rs  ray.rs  rtw_stb_image.rs  sphere.rs  vec3.rs
rust/WithOIDN/: Cargo.toml  build.rs
rust/WithOIDN/src/: aabb.rs  camera.rs  color.rs  constant_medium.rs  hittable.rs  lib.rs  main.rs  material.rs  onb.rs  pdf.rs  rtweekend.rs  texture.rs
rust/WithOIDN/src/oidn/: bindings.rs  mod.rs
src/InOneWeekend/: main.cc  rtweekend.h
src/TheNextWeek/: bvh.h
